client/web/src/enterprise/batches/create/CreateOrEditBatchChangePage.module.scss
@import 'wildcard/src/global-styles/breakpoints';

.editor-layout-container {
    // Default of min-height: auto when this element is display: flex allows children to
    // set its height. We want to keep this fixed and have children overflow: auto
    // instead.
    min-height: 0;
}

.editor-container {
    display: flex;
    flex-direction: column;
    flex: 1;
    min-width: 20%;
    height: 100%;
}

.editor {
    flex: 1;
    max-height: 100%;
}

.workspaces-preview-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-left: 1rem;
    background: none;
    border: none;
    width: 100%;
}

// Should mostly match WorkspacesPreview header and LibraryPane header
.header {
    display: flex;
    align-items: center;
    justify-content: flex-start;
    width: 100%;
    padding-bottom: 0.5rem;
    margin-bottom: 0.5rem;
    border-bottom: 1px solid var(--border-color);
    overflow: hidden;
}

.download-link {
    padding: 0;
    font-weight: normal;
}

.cta-group {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    align-items: center;
    gap: 0.625rem;
}

.batch-config-form {
    margin: 2rem auto;
    padding-bottom: 3rem;
    width: 50%;

    @media (--sm-breakpoint-down) {
        width: 100%;
    }
}

